discussion/kv_engine/161075/161075_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47386, MB-48038: Avoid call to CM::getMemoryUsageOfUnrefCheckpoints

Avoid the call in CheckpointVisitor.
That is a O(N = ckpt-list-size) call that would be expensive in the case of many
checkpoints in the CheckpointList.

Also, this patch fixes a wrong accounting of memory released in the
CheckpointVisitor. One side effect of that wrong accounting is that we might end
up dropping more cursors than necessary in the visitor. Or on the opposite, we
might stop the visitor too early and release less than what needed.

Note that this patch brings another improvement worth to be mentioned. In the
old behaviour first we try to drop some cursor and then we attempt to remove
checkpoints, which might cause unnecessary cursor dropping. Here the order is
inverted: first remove any checkpoint eligible for removal (if any), then (and
only if the mem-release target is not reached yet) proceed with dropping
cursors.

Change-Id: Ida34576672291dbed9e3ac217a5647601cd6ef39

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-14 07:19:06.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-14 07:43:12.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33914/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/build/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
fatal error: "gmock/gmock.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33914/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39810/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\build\tlm\deps\folly.exploded\include\folly/portability/GTest.h(32): fatal error C1083: Cannot open include file: "gtest/gtest.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39810/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12339/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12339/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12339/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13095/ : FAILURE

Compile error at [2021-09-14T07:36:22.925Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13095/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1979/ : FAILURE

Compile error at [2021-09-14T07:24:25.696Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1979/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13955/ : FAILURE

Compile error at [2021-09-14T07:23:26.452Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: gtest/gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13955/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14195/ : FAILURE

Compile error at [2021-09-14T07:24:00.461Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: gtest/gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14195/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14688/ : FAILURE

Compile error at [2021-09-14T07:25:06.740Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14688/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22188/ : FAILURE

Compile error at [2021-09-14T07:24:52.320Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: "gtest/gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22188/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1997/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11129/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
